--- a/src/ad.pug
+++ b/src/ad.pug
@@ -46,9 +46,9 @@ html(lang="ru", dir="ltr")
             img.element.element_2(src="../images/yandex-logo.png")            
             .container
                 .row
-                    .col-xl-10.col-lg-8
-                        h2.heading.margin-bottom Зачем нужна 
-                            span.text-green реклама в&nbsp;Яндекс и&nbsp;Google
+                    .col-xl-9.col-lg-8
+                        h2.heading.margin-bottom Зачем нужна настройка контекстной 
+                            span.text-green рекламы в&nbsp;Яндекс и&nbsp;Google
                     .col-xl-6.offset-xl-1
                         ol.list.list_ol.row.justify-content-between.align-items-center.margin-bottom.margin-bottom-xs-none
                             li.list__item.col-lg-5 Повышение узнаваемости бренда
@@ -57,7 +57,7 @@ html(lang="ru", dir="ltr")
                             li.list__item.list__item_last.col-lg-5 Повышение эффективности рекламы
                     .col-xl-5.offset-xl-1
                         h3.heading.heading_small.margin-top Почему выбирают рекламу от SOHO?
-                        p.offer Профессиональная настройка рекламы с использованием наиболее эффективных методов Яндекс и Google. Разработка преимуществ и уникальных торговых предложений (УТП), чтобы получить высокую рентабельность вложений. 
+                        p.offer.margin-bottom Профессиональная настройка рекламы с использованием наиболее эффективных методов Яндекс и Google. Разработка преимуществ и уникальных торговых предложений (УТП), чтобы получить высокую рентабельность вложений. 
                     .col-xl-6.offset-xl-1
                         .row.margin-bottom
                             .col-sm-5
@@ -66,67 +66,66 @@ html(lang="ru", dir="ltr")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title БЫСТРО 
-                                    .item__offer Настройка и запуск от 1 до 5 дней
+                                    .item__offer Настройка и запуск рекламной кампании в срок от 1 до 5 дней
                             .col-sm-5
                                 .item.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title ТОЧНО 
-                                    .item__offer Находим только целевую аудиторию
+                                    .item__offer Находим только целевую аудиторию, что снижает стоимость клиента
                             .col-sm-5
                                 .item.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title Прозрачно 
-                                    .item__offer Вы получите полный доступ к&nbsp;статистике
+                                    .item__offer Вы получите полный доступ к&nbsp;статистике и отчет в конце месяца
                             .col-sm-5
                                 .item.item_last-md.item_with-icon
                                     svg.item__icon(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                                         g
                                             path.active-path(d="M150.383,18.301c-7.13-3.928-15.308-6.187-24.033-6.187c-15.394,0-29.18,7.015-38.283,18.015    c-9.146-11-22.919-18.015-38.334-18.015c-8.704,0-16.867,2.259-24.013,6.187C10.388,26.792,0,43.117,0,61.878    C0,67.249,0.874,72.4,2.457,77.219c8.537,38.374,85.61,86.771,85.61,86.771s77.022-48.396,85.571-86.771    c1.583-4.819,2.466-9.977,2.466-15.341C176.104,43.124,165.716,26.804,150.383,18.301z" data-original="#000000" data-old_color="#FCFAFA" fill="#FCFBFB")
                                     .item__title ЭФФЕКТИВНО 
-                                    .item__offer Постоянный контроль и&nbsp;оптимизация&nbsp;рекламы               
+                                    .item__offer Постоянный контроль кампании и&nbsp;оптимизация&nbsp;рекламы               
                 .row.align-items-end
                     .col-xl-4.offset-xl-2.col-lg-6.offset-lg-3
                         p.heading.heading_small У вас 
                             span.text-green уже есть реклама, 
                             | но&nbsp;вы недовольны результатами?
                         p.offer Клиентов, которые заказывают товар, очень мало? Конечная стоимость клиента слишком высока? Затраты на рекламу больше, чем доход от нее? Вам кажется, что бюждет просто “сливают”?
-                        .margin-bottom-lg
-                            a.btn.btn_primary(href="#") Анализ рекламной кампании
+                        a.btn.btn_primary.margin-bottom-lg(href="#") Анализ рекламной кампании
                     .col-xl-4.col-md-8.offset-md-2.col-lg-6.offset-lg-3.offset-xl-0
                         p.offer.offer_subtitle.text-uppercase.text-bold Выход есть — 
-                            span.text-darkblue многофакторный анализ                  
+                            span.text-green многофакторный анализ 
+                            | НАСТРОЙКИ КОНТЕКСТНОЙ РЕКЛАМЫ              
                         p.offer.small Он проводится на всех уровнях: рынок, стратегия, потребность в товаре, размер ставок и корректировок
-                        p.offer.last
+                        p.offer.small.last
                             span.text-bold В результате 
                             | мы составим список рекомендаций: как улучшить рекламную кампанию и страницы сайта. Это приведет к повышению эффективности и увеличению вашего дохода, одновременно помогая оценить работу специалистов, которые в данный момент занимаются ведением рекламы Яндекс и/или Google.            
-        .content.content_project.project
+        .content.project
             .container
                 .row
                     .col-xl-10
-                        h4.heading.heading_medium.margin-bottom Пример рекламной кампании
+                        h4.heading.heading_medium Пример рекламной кампании
                         .offer Один из последних проектов SOHO
                     .col-xl-5.col-lg-8
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Задача
                             .project__task__content 
                                 p.offer.last Необходимо было быстро настроить рекламную кампанию в Директе, для скорейшего обеспечения клиента заказами. После этого настроить рекламу в Google. Одно из ключевых требований - только целевая аудитория и ни в коем случае не выходить за рамки бюджета. 
                     .col-xl-5.col-lg-8
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Решение
                             .project__task__content
                                 p.offer.last Изначально разработали рекомендации по улучшению посадочных страниц, чтобы посетители видели необходимую информацию, проходили большую часть этапов продажи на странице и оставляли заявку. Пока вносились правки на сайте, собрали ключевые слова, разработали УТП, проработали тексты объявлений, настроили счетчики, аналитику  и цели для возможности точной оценки эффективности рекламы.
-                .row.margin-bottom-xs
-                    .col-xl-8
+                .row
+                    .col-xl-5.margin-bottom-xs
                         p.heading.heading_small Результаты через 1 месяц
                         p.offer.last Бюджет рекламной кампании был израсходован только на 30%, а все плановые показатели по заявкам 
                             | были выполнены. Оптимизация велась каждый день (тестовое ведение рекламы именно поэтому такое дорогое), 
                             | нам удалось избежать нецелевого трафика и получить заказы по согласованной цене заявки.
-                .row.margin-bottom-xs
-                    .col-xl-8
+                    .col-xl-5.margin-bottom-xs
                         p.heading.heading_small Результаты через 2 месяца
                         p.offer.last Сумма расходов увеличилась на 1520 руб. за месяц. И вот каких результатов нам удалось достичь:
                 .row.margin-bottom
@@ -153,7 +152,7 @@ html(lang="ru", dir="ltr")
                         p.offer 
                             a.btn.btn_primary(href="#") Хочу эффективную рекламу
                     .col-xl-4.col-md-4.margin-top-sm
-                        img.img-fluid(src="../images/test-03.png")
+                        img.img-fluid.img-border(src="../images/graphic-ad-portfolio.svg")
         .content.content_price
             .container.content_price__container
                 .row
@@ -243,7 +242,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row.align-items-end
                     .col-xl-6
-                        h4.heading Нужны клиенты?<br/>Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты?<br/>Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Да, нужны
