--- a/src/blog_inside.pug
+++ b/src/blog_inside.pug
@@ -71,16 +71,18 @@ html(lang="ru", dir="ltr")
                     g(style="fill: url(#gradient_02); filter: url(#shadow);")
                         rect(x="12" y="9.5" width="71" height="160")
                         rect(x="97" y="9.5" width="71" height="160")            
-            .container
+            .container.post__container
                 .row.justify-content-center
                     .col-sm-10.col-xl-8
                         .page__image(style="background-image:url('../images/image_blog.png');")
-                        .page__info.bg-grey
+                        .page__info
                             .page__breadcrumb.breadcrumb
                                 .breadcrumb__item 
                                     a(href="#") Главная
+                                |  / 
                                 .breadcrumb__item 
                                     a(href="#") Блог
+                                |  / 
                                 .breadcrumb__item 
                                     span 6 способов прокачать первый экран на вашем сайте
                             .page__reading Время чтения: 
@@ -89,7 +91,7 @@ html(lang="ru", dir="ltr")
                             h1.heading 6 способов прокачать первый экран на вашем сайте
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
-                            img(src='../images/image_post.png' alt="" title="")
+                            img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
                             h2 Заголовок h2
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             h3 Заголовок h3
@@ -98,25 +100,25 @@ html(lang="ru", dir="ltr")
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             h5 Заголовок h5
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-        .content.post.post_preview
+        .post-preview
             .container
                 .heading Самое актуальное в нашем 
                     a.link(href="#") блоге
-                .row.justify-content-between
-                    .col-lg-3.col-md-5.post__item
-                        a(href="#").post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
-                        .post__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.col-md-5.post__item
-                        a(href="#").post__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
-                        .post__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.col-md-10.post__item.post__item_last
-                        a(href="#").post__item__title Продвижение сайта почти бесплатно
-                        .post__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                .row
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title Продвижение сайта почти бесплатно
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
         .content.content_contact.inside
             .container
                 .row
                     .col-xl-6
-                        h4.heading Нужны клиенты? <br/> Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Хочу больше клиентов
