--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,30 +15,37 @@
 
 @import "elements/text.scss";
 @import "elements/indent.scss";
+@import "elements/breadcrumb.scss";
 @import "elements/toggle-tabs.scss";
 @import "elements/modal.scss";
+@import "elements/item.scss";
+@import "elements/list.scss";
 
 @import "form/form.scss";
 @import "form/buttons.scss";
 
-// @import "item.scss";
-// @import "list.scss";
+@import "content/content.scss";
+@import "content/contentTitle.scss";
+@import "content/contentContact.scss";
+@import "content/contentPrice.scss";
+@import "content/contentForm.scss";
 
 @import "blocks/header.scss";
 @import "blocks/nav.scss";
 @import "blocks/portfolio.scss";
 @import "blocks/post.scss";
+@import "blocks/project.scss";
+@import "blocks/price.scss";
 @import "blocks/footer.scss";
 
-@import "content/content.scss";
-@import "content/contentTitle.scss";
-@import "content/contentContact.scss";
-@import "content/contentForm.scss";
-
-
 @import "page/index.scss";
-// @import "page.scss";
-
+@import "page/design.scss";
+@import "page/dev.scss";
+@import "page/seo.scss";
+@import "page/marketing.scss";
+@import "page/ad.scss";
+@import "page/post.scss";
+@import "page/page.scss";
 
 html {
     box-sizing: border-box;
@@ -65,541 +72,15 @@ a{
 .bg-grey{background: #f1f1f1;}
 
 .img-fluid{max-width: 100%;}
+.img-border{border: 1px solid lighten($color: $lightgrey, $amount: 25%);}
 
-// /* CONTENT */
-// .content{
-//     .element{
-//         //SEO
-//         &_04{
-//             bottom: 0;
-//             right: 0;
-//             width: 720px;
-//         }
-//     }     
-//     /* PRICE BLOCK */
-//     &_price{
-//         background: #272727;
-//         color: $white;
-//         .offer{
-//             color: darken($color: $white, $amount: 50%);
-//             width: 650px;
-//             max-width: 100%;
-//             margin: 0 auto;
-//         }
-//         .content_price__container + .content_price__container{
-//             margin-top: 100px;
-//         }
-//     }
-// }
-// /* FOR DEVELOP PAGE */
-// .dev{
-//     .header{
-//         &__email{
-//             color: $red;
-//         }
-//         &__nav{
-//             background: $red;
-//         }
-//     }
-//     .content{
-//         &_title{
-//             background: linear-gradient(-135deg, #fbb614 0%, #ffd71c 100%);
-//             .offer{
-//                 margin-bottom: 100px;
-//             }
-//             &__svg{
-//                 top: -30px;
-//             }
-//             &__elements{
-//                 bottom: -100px;
-//             }
-//         }
-//         &_background{
-//             background: url("../images/bg_dev.png") no-repeat left bottom / 680px;
-//         }
-//         &_color{
-//             overflow: hidden;
-//             padding: 150px 0;
-//             background: linear-gradient(90deg, #fdc830 0%, #fed61d 100%);
-//             // min-height: 100vh;
-//             .subheading{
-//                 color: #a47a00;
-//             }
-//             .offer{
-//                 color: $black;
-//             }
-//         }
-//         &_price{
-//             .element{
-//                 &_1{
-//                     width: 250px;
-//                     top: -100px;
-//                     left: -50px;
-//                 }
-//                 &_2{
-//                     width: 210px;
-//                     bottom: -60px;
-//                     right: -120px;
-//                     z-index: 11;
-//                 }
-//                 &_3{
-//                     width: 280px;
-//                     top: -100px;
-//                     right: -50px;
-//                 }
-//             }
-//         }
-//         .element{
-//             //WORDPRESS
-//             &_01{
-//                 bottom: 0;
-//                 right: -100px;
-//                 width: 1200px;
-//             }
-//             //MODX
-//             &_02{
-//                 top: 0;
-//                 left: -30px;
-//                 width: 600px;
-//             }
-//             //PAUSE
-//             &_03{
-//                 width: 550px;
-//                 height: 550px;
-//                 top: calc(50% - 275px);
-//                 right: calc((100% - 1380px)/2);
-//             }
-//         }
-//     }
-//     .price{
-//         &_large{
-//             .price__header{
-//                 background: linear-gradient(-135deg, #fdc830 0%, #fed61d 100%);
-//             }
-//         }
-//     }
-// }
-// /* FOR SEO PAGE */
-// .seo{
-//     .header{
-//         &__email{
-//             color: $lightgreen;
-//         }
-//         &__nav{
-//             background: $lightgreen;
-//             &__path{
-//                 fill: #637b0d;
-//             }
-//         }
-//     }
-//     .content{
-//         &_title{
-//             background: linear-gradient(180deg, #637b0d 0%, #99af01 100%);
-//         }
-//         &_color{
-//             overflow: hidden;
-//             color: $white;
-//             background: linear-gradient(180deg, #637b0d 0%, #99af01 100%);
-//             .heading.first{
-//                 margin-bottom: 60px;
-//             }
-//             .subheading{
-//                 color: $lightgreen;
-//             }
-//             .offer{
-//                 color: $white;
-//             }
-//             .item{
-//                 &_with-icon{
-//                     .item__icon{
-//                         background: $lightgreen;
-//                     }
-//                     .item__title{
-//                         color: $white;
-//                     }
-//                     .item__offer{
-//                         color: $lightgreen;
-//                     }
-//                 }
-                
-//                 &_info{
-//                     background: $lightgreen;
-//                     margin-bottom: 0;
-//                     .item__title{
-//                         color: $black;
-//                     }
-//                     .item__offer {
-//                         width: 100%;
-//                     }
-//                 }
-//             }
-//         }
-//         &_price{
-//             .subheading{
-//                 color: $lightgreen;
-//             }
-//         }
-//         &_price{
-//             .element{
-//                 &_1{
-//                     width: 220px;
-//                     top: -100px;
-//                     left: -50px;
-//                 }
-//                 &_3{
-//                     width: 260px;
-//                     top: -100px;
-//                     right: -50px;
-//                 }
-//             }
-//         }
-//         .element{
-//             //PAUSE
-//             &_03{
-//                 width: 420px;
-//                 height: 420px;
-//                 top: 230px;
-//                 left: calc((100% - 1380px)/2);
-//             }
-//         }
-//         .col-comment{
-//             .element_comment{
-//                 width: 320px;
-//                 position: absolute;
-//                 right: 0;
-//                 bottom: 50px;
-//             }
-//         }
-//     }
-//     .price{
-//         &_large{
-//             .price__header{
-//                 background: linear-gradient(180deg, #637b0d 0%, #99af01 100%);
-//             }
-//         }
-//     }    
-// }
-// /* FOR MARKETING PAGE */
-// .marketing{
-//     .header{
-//         &__email{
-//             color: $white;
-//         }
-//         &__nav{
-//             background: $darkred;
-//             &__path{
-//                 fill: $white;
-//             }
-//         }
-//     }
-//     .content{
-//         &_title{
-//             background: linear-gradient(180deg, #930e00 0%, #fd2d17 100%);
-//             &__elements{
-//                 bottom: -100px;
-//             }
-//             &__svg{
-//                 transform: translateY(-30px);
-//             }
-//             .offer{
-//                 width: 440px;
-//                 max-width: 100%;
-//             }
-//         }
-//         &_color{
-//             color: $white;
-//             background: linear-gradient(180deg, #bf0e00 0%, #fd2d17 100%);
-//             .heading_small{
-//                 font-size: 26px;
-//             }
-//             .offer{
-//                 color: $white;
-//                 margin: 20px 0 0;
-
-//                 width: 400px;
-//                 max-width: 100%;
-//                 &.small{
-//                     font-size: 14px;
-//                     line-height: 20px;
-//                 }
-//             }
-//             .element{
-//                 bottom: -10px;
-//                 left: 0;
-//             }
-//             .row{
-//                 flex-wrap: nowrap;
-//                 .column{
-//                     padding: 0 20px;
-//                     .heading{
-//                         white-space: nowrap;
-//                     }
-//                 }
-//             }
-//         }
-//         &_padding{
-//             z-index: 10;
-//             .element{
-//                 position: absolute;
-//                 left: 0;
-//                 bottom: -120px;
-
-//                 width: 450px;
-//             }
-//         }
-//         &_price{
-//             .element{
-//                 &_1{
-//                     width: 220px;
-//                     top: -100px;
-//                     left: -50px;
-//                 }
-//                 &_3{
-//                     width: 260px;
-//                     top: -100px;
-//                     right: -50px;
-//                 }
-//             }
-//         }
-//         .list{
-//             width: 410px;
-//             max-width: 100%;
-//             padding: 40px;
-//             background: lighten($lightgrey, 30%);
-//             &__item{
-//                 color: $grey;
-//                 &:before{
-//                     background: linear-gradient(180deg, #bf0e00 0%, #fd2d17 100%);
-//                 }
-
-//                 & + .list__item{
-//                     margin-top: 20px;
-//                 }
-//             }
-//         }
-//     }
-//     .price{
-//         &_large{
-//             .price__header{
-//                 background: linear-gradient(180deg, #bf0e00 0%, #fd2d17 100%);
-//             }
-//         }
-//     }
-// }
-// /* FOR AD PAGE */
-// .ad{
-//     .header{
-//         &__email{
-//             color: $darkgreen;
-//         }
-//         &__nav{
-//             background: $green;
-//         }
-//     }
-//     .content{
-//         &_title{
-//             background: linear-gradient(180deg, #c5f068 0%, #d3fb78 100%);
-//             .heading{
-//                 color: $darkgreen;
-//             }
-//             .offer{
-//                 width: 450px;
-//                 max-width: 100%;
-//                 color: $darkgreen;
-//             }
-//             &__elements{
-//                 bottom: -100px;
-//             }
-//             &__svg{
-//                 transform: translateY(-30px);
-//             }
-//         }
-//         .list{
-//             &__item{
-//                 margin-bottom: 20px;
-//                 &:before{
-//                     background: linear-gradient(45deg, #2b248a 0%, #361cbc 100%);
-//                 }
-//             }
-//         }
-//         .item{
-//             .item__icon{
-//                 background: $lightgrey;
-//             }
-//             .item__offer{
-//                 color: $lightgrey;
-//                 width: 280px;
-//             }
-//         }
-//         &_project{
-//             background: linear-gradient(180deg, #dcf599 0%, #d3fb78 100%);
-//         }
-//         &_element{
-//             .element{
-//                 &_1{
-//                     width: 300px;
-//                     bottom: 90px;
-//                     left: calc( 50% - 720px);
-//                 }
-//                 &_2{
-//                     width: 300px;
-//                     top: 250px;
-//                     right: calc( 50% - 550px);
-//                 }
-//             }
-//         }
-//         &_price{
-//             .element{
-//                 &_1{
-//                     width: 250px;
-//                     top: -100px;
-//                     left: -50px;
-//                 }
-//                 &_2{
-//                     width: 220px;
-//                     bottom: -60px;
-//                     right: -120px;
-//                     z-index: 11;
-//                 }
-//                 &_3{
-//                     width: 210px;
-//                     top: -100px;
-//                     right: -50px;
-//                 }
-//             }
-//         }
-//         .price{
-//             &_large{
-//                 .price__header{
-//                     background: linear-gradient(180deg, $green 0%, darken($green, 10%) 100%);
-//                     padding: 12px 30px;
-//                 }
-//             }
-//         }
-//     }
-// }
-// /* FOR DESIGN PAGE */
-// .design{
-//     .header{
-//         &__email{
-//             color: $pink;
-//         }
-//         &__nav{
-//             background: $pink;
-//         }
-//     }
-//     .content{
-//         &_title{
-//             background: linear-gradient(180deg, #ecc2f9 0%, #f1dcf9 100%);
-//             .heading{
-//                 color: $grey;
-//             }
-//             .offer{
-//                 max-width: 100%;
-//                 color: $grey;
-//             }
-//             &__elements{
-//                 bottom: -100px;
-//             }
-//             &__svg{
-//                 transform: translateY(-30px);
-//             }
-//         }
-//         &_color{
-//             background: #f2dff8 url("../images/bg_design.png") no-repeat center top/contain;
-//             background-position-y: -150px;
-//             padding-top: 200px;
-
-//             color: $grey;
-//             .heading + .subheading {
-//                 margin-top: 60px;
-//             }
-//             .subheading + .offer {
-//                 margin-top: 20px;
-//             }
-//             .element{
-//                 position: relative;
-//                 width: 100%;
-//                 margin-bottom: 60px;
-//             }
-//         }
-
-//         .item{
-//             .item__number{
-//                 background: $pink;
-//             }
-//             &_image{
-//                 .item__image:before{
-//                     background: rgba(250, 33, 161, .15);
-//                 }
-//                 .item__image:hover{
-//                     &:before{
-//                         background: rgba(250, 33, 161, 0);
-//                     }   
-//                 }
-//             }
-//         }
-//     }
-// }
-
-// /* PROJECT IN PORTFOLIO BLOCK */
-// .project{
-//     .heading{
-//         &.margin-bottom{
-//             margin-bottom: 30px;
-//         }
-//         & + .offer{
-//             margin: 30px 0 50px;
-//         }
-//     }
-//     .offer{
-//         margin-bottom: 20px;
-//     }
-//     &__stats{
-//         padding-top: 120px;
-//         padding-left: 100px;
-//         padding-bottom: 15px;
-//         max-width: 400px;
-
-//         background-position: left bottom;
-//         background-repeat: no-repeat;
-
-//         &.offer{
-//             line-height: 20px;
-//         }
-//     }
-//     &__task{
-//         display: flex;
-//         flex-wrap: nowrap;
-//         &__item{
-//             font-size: 12px;
-//             line-height: 26px;
-
-//             padding-right: 20px;
-//             text-transform: uppercase;
-
-//             flex: 0 0 110px;
-//             max-width: 110px;
-//         }
-//     }
-// }
-// /* SCROLL PANE */
-// .jspTrack {
-//     background: #713fe9;
-// }
-// .jspDrag {
-//     background: #8a5df7;
-// }
-// /* FORM ERROR */
-// .has-validation .form-validation .error{
-//     position: absolute;
-//     left: 30px;
-//     top: 5px;
-//     font-size: 10px;
-//     color: $red;
-// }
-
-
+/* SCROLL PANE */
+.jspTrack {
+    background: #713fe9;
+}
+.jspDrag {
+    background: #8a5df7;
+}
 
 .go-to-top{
     @extend .header__nav;
