--- a/src/design.pug
+++ b/src/design.pug
@@ -49,7 +49,7 @@ html(lang="ru", dir="ltr")
                     .col-xl-10.col-lg-8
                         h2.heading.margin-bottom Дизайн полиграфии
                     .col-xl-6
-                        p.offer Разработка дизайна полиграфической продукции с учетом всех требований типографии: 
+                        p.offer.margin-bottom Разработка дизайна полиграфической продукции с учетом всех требований типографии: 
                             | качественный и&nbsp;стильные макеты визиток, листовок и&nbsp;всего, что может понадобится вам для презентации компании.
                             | Вы получаете на&nbsp;руки готовые к&nbsp;печати файлы, подготовленные с&nbsp;учётом технических 
                             | требований, фирменного стиля и&nbsp;ваших пожеланий к&nbsp;оформлению.
@@ -129,13 +129,13 @@ html(lang="ru", dir="ltr")
                         .offer Мы умеем все. Это не шутка. По части дизайна мы прошли свой путь самурая, поэтому с&nbsp;полной ответственностью можем заявить, что сможем выполнить заказ на любое нестандартное решение: 
                 .row.justify-content-center               
                     .col-xl-8.text-center
-                        .content__btn
-                            .content__btn__link Оформление фудкорта
-                            .content__btn__link Разработка сценического баннера
-                            .content__btn__link Создание тантамарески
-                            .content__btn__link Уличные вывески
-                            .content__btn__link Брендирование эскалатора
-                            .content__btn__link декор открытых площадок
+                        .content__group
+                            .content__group__link Оформление фудкорта
+                            .content__group__link Разработка сценического баннера
+                            .content__group__link Создание тантамарески
+                            .content__group__link Уличные вывески
+                            .content__group__link Брендирование эскалатора
+                            .content__group__link декор открытых площадок
             .container
                 .row.margin-bottom.margin-bottom-sm-none
                     .col-xl-6.offset-xl-2.text-center
