--- a/src/dev.pug
+++ b/src/dev.pug
@@ -39,7 +39,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row
                     .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
-                        h1.heading Верстка и&nbsp;настройка&nbsp;CMS
+                        h1.heading Верстка сайта и&nbsp;настройка&nbsp;CMS
                         .offer Дизайн проекта готов и&nbsp;появляется вопрос «что&nbsp;дальше?»
         .content.content_background
             .container.p-relative
@@ -177,10 +177,10 @@ html(lang="ru", dir="ltr")
             .container
                 .row.align-items-end
                     .col-xl-6
-                        h4.heading Нужны клиенты? <br/> Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Обсудим проект
                     .col-xl-3
-                        .offer Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
+                        .offer.last Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
         include chunks/footer.pug
