--- a/src/marketing.pug
+++ b/src/marketing.pug
@@ -40,7 +40,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row
                     .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
-                        h1.heading Интернет-маркетинг под ключ
+                        h1.heading Интернет-маркетинг под&nbsp;ключ
                         .offer.last Разработаем систему привлечения новых клиентов индивидуально для вашего бизнеса
         .content
             .container
@@ -48,10 +48,11 @@ html(lang="ru", dir="ltr")
                     .col-xl-10
                         h2.heading.margin-bottom Зачем нужен интернет-маркетинг?
                 .row.justify-content-between.align-items-center
-                    .col-xl-5.col-lg-6
+                    .col-xl-5.col-lg-6.col-comment
                         p.offer Вы задумывались, что побуждает пользователя сделать заказ услуги или купить товар на сайте? Конечно, во многом - это ваша заслуга. Вы предлагаете товар, который нравится людям и они его покупают. 
                         p.offer Однако, чтобы люди узнали об уникальной услуге или особенном товаре, нужна командная работа профессиональных интернет-маркетологов. Именно они могут не только грамотно рассказать об уникальных свойствах продукта, но и привлечь заинтересованную целевую аудиторию. 
                         p.offer.last-xl Интернет-маркетинг - универсальный инструмент для любого бизнеса. Он необходим всем отраслям, потому что решает сразу несколько важных задач. 
+                        img.element.element_comment(src="./images/comment/arrow.png")                   
                     .col-xl-4.col-lg-4
                         ol.list.list_ol
                             li.list__item Повышение узнаваемости бренда
@@ -94,41 +95,45 @@ html(lang="ru", dir="ltr")
                     .column.col-lg-3.col-xl-4
                         .heading.heading_small Проверенные инструменты продаж
                         .offer.small Заказав услугу, вы получаете профессионалов, которые создадут работающий инструмент продаж
-        .content.content_padding.bg-white.p-relative
-            img.element.img-fluid(src="../images/marketing.png")
+        .content.content_mockup.bg-white.p-relative
+            img.element.element.img-fluid(src="../images/marketing.png")
             .container.p-relative
                 .row
                     .col-xl-7.offset-xl-3
                         h3.heading Услуги по интернет-маркетингу
                         p.offer Обратившись к нам, вы получите эффективный инструмент продаж. Мы не просто знаем о том, как сделать сайт продающим, но и сами внедряем разработки, которые увеличивают количество посетителей уже в первый месяц! 
-                        .content__btn
-                            a.content__btn__link(href="#") Маркетинговая аналитика
-                            a.content__btn__link(href="#") Брендинг
-                            a.content__btn__link(href="#") Составление портрета пользователя
-                            a.content__btn__link(href="#") Квиз-маркетинг
-                            a.content__btn__link(href="#") Создание воронки продаж
-                            a.content__btn__link(href="#") Создание посадочных страниц
-        .content.content_project.project.bg-grey
+                        .content__group
+                            .content__group__link Маркетинговая аналитика
+                            .content__group__link Брендинг
+                            .content__group__link Составление портрета пользователя
+                            .content__group__link Квиз-маркетинг
+                            .content__group__link Создание воронки продаж
+                            .content__group__link Создание посадочных страниц
+        .content.project.bg-grey
             .container
                 .row
                     .col-xl-10
-                        h4.heading.heading_medium.margin-bottom Проект по интернет-маркетингу
+                        h4.heading.heading_medium Проект по интернет-маркетингу
                         .offer Один из последних проектов SOHO
                     .col-xl-5
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Задача
                             .project__task__content 
                                 p.offer Проработать маркетинговую составляющую сайта: разработка УТП, преимуществ, продающих текстов и форм. Сделать его привлекательным, наполнить актуальной информацией, подготовить все страницы к запуску рекламы. 
                                 p.offer Настроить рекламную кампанию, повысить число заявок с нее и из поисковых систем.
+                                ul
+                                    li переработать всю информацию на сайте для повышения количества заявок;
+                                    li улучшить общее восприятие информации;
+                                    li изменить дизайн сайта на более современный и&nbsp;внушающий&nbsp;доверие
                     .col-xl-5
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Решение
                             .project__task__content
                                 p.offer Работы начали с проработки структуры страниц и составления прототипов. Каждый блок продумывался, исходя из реальных преимуществ компании и отдельной услуги. 
                                 p.offer После этого последовал редизайн сайта, подбор семантики, проработка нового контента. Когда сайт внешне был готов, мы добавили на него формы захвата лидов. 
                 .row.margin-bottom
                     .col-xl-10
-                        p.heading.heading_small.margin-bottom Достигнутый эффект
+                        p.heading.heading_small Достигнутый эффект
                     .col-xl-6
                         p.offer После всех проведенных на сайте работ, конверсия выросла с 0,1% до 13%. 
                         p.offer.last Благодаря тщательной работе с возражениями, редизайну и качественной проработке инфомационных блоков, с ресурса начали поступать заявки. Точно настроенная реклама обеспечивала стабильный рост заинтересованной аудитории и, как следствие, заявок с сайта.
@@ -178,7 +183,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row.align-items-end
                     .col-xl-6
-                        h4.heading Нужны клиенты?<br/>Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты?<br/>Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Да, нужны
