--- a/src/portfolio.pug
+++ b/src/portfolio.pug
@@ -34,30 +34,36 @@ html(lang="ru", dir="ltr")
         .container.post__container
             .row.margin-bottom
                 .col-9
-                    h1.heading.heading_blog Самое актуальное в нашем блоге
+                    h1.heading.heading_blog Реализованные нами проекты
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
-                        .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/test-01.jpg')")
-                        .post__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/test-02.jpg')")
-                        .post__item__title Продвижение сайта почти бесплатно
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
-                        .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/test-01.jpg')")
-                        .post__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
                 .col-xl-3.col-md-5
                     a.post__item.post__item_image(href="#" style="background-image: url('../images/test-02.jpg')")
-                        .post__item__title Продвижение сайта почти бесплатно
+                        .post__item__title САЙТ ДЛЯ WANTER
+                        .post__item__intro Переработка главной страницы сайта. Разработка дополнительных страниц под конкретные виды наружной рекламы и интерьерных решений
                         .post__item__info 12.09.2018
         .content.content_contact.inside
             .container
