--- a/src/seo.pug
+++ b/src/seo.pug
@@ -39,7 +39,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row
                     .col-xl-6.col-md-8.col-10.offset-md-2.offset-xl-1
-                        h1.heading SEO-продвижение для&nbsp;бесплатного трафика
+                        h1.heading SEO-продвижение сайта для&nbsp;бесплатного трафика
                         .offer.last Обеспечим поток посетителей на ваш сайт из&nbsp;Яндекс и&nbsp;Google
         .content.p-relative
             svg.element.element_04(viewBox="0 0 800 330" preserveAspectRatio="xMinYMin meet")
@@ -52,9 +52,8 @@ html(lang="ru", dir="ltr")
                         img.element.element_comment(src="./images/comment/seo_comment_1.png")                   
                     .col-xl-5.col-lg-5
                         h3.heading.heading_small Зачем нужно SEO?
-                        p.offer Более 10 миллиардов запросов каждодневно вводится в поисковые системы для получения информации, услуг или покупки товаров. Более 2 триллионов сайтов в интернете. Использование поисковой оптимизации выведет ваш сайт на первые страницы Яндекса и Google по нужным ключевым словам (это те же запросы, которые вводят люди в поисковую строчку, например «купить диван спб»).
+                        p.offer Более 10 миллиардов запросов каждодневно вводится в поисковые системы для получения информации, услуг или покупки товаров. Более 2 триллионов сайтов в интернете. Использование поисковой оптимизации выведет ваш сайт на первые страницы Яндекса и Google по нужным ключевым словам.
                         p.offer Почему нужно быть на первых страницах выдачи? Вспомните, как часто вы заходите дальше 2 или 3 страницы в поиске? Рискнем предположить – крайне редко!
-                   
                     .col-xl-10.margin-top.margin-top-sm-none
                         h3.heading Есть сайт, но он не&nbsp;приносит прибыль?
                     .col-xl-4.offset-xl-1.col-lg-6.margin-top.margin-top-sm-none
@@ -123,24 +122,25 @@ html(lang="ru", dir="ltr")
                 .row.text-lg-center
                     .col-xl-6.offset-xl-3
                         a.btn.btn_primary(href="#") хочу seo-продвижение
-        .content.content_project.project
+        .content.project
             .container
                 .row
                     .col-xl-10
-                        h4.heading.heading_medium.margin-bottom Проект по SEO-продвижению
-                        .offer Один из последних проектов SOHO
+                        h4.heading.heading_medium Проект по SEO-продвижению
+                        .offer — посмотреть на 
+                            a(href="#") все реализованные проекты SOHO
                     .col-xl-5
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Задача
                             .project__task__content 
-                                p.offer Сайт существовал уже несколько лет, но в поиске его практически не было ни по одному ключевому запросу. Клиентам хотелось увеличить базу клиентов и узнаваемость. По времени было дано 6 месяцев.
-                        .project__task.margin-bottom
+                                p.offer.last Сайт существовал уже несколько лет, но в поиске его практически не было ни по одному ключевому запросу. Клиентам хотелось увеличить базу клиентов и узнаваемость. По времени было дано 6 месяцев.
+                        .project__task
                             .project__task__item Проблема
                             .project__task__content 
-                                p.offer Был проведен комплексный аудит и выявлено, что SEO никогда не проводилось, а 
+                                p.offer.last Был проведен комплексный аудит и выявлено, что SEO никогда не проводилось, а 
                                     span.text-bold посетители, которые заходили на сайт в 8 из 10 случаев быстро уходили.
                     .col-xl-5
-                        .project__task.margin-bottom
+                        .project__task
                             .project__task__item Решение
                             .project__task__content
                                 p.offer Начали с технической оптимизации сайта, потому что без нее дальнейшие действия не имели смысла. 
@@ -148,7 +148,7 @@ html(lang="ru", dir="ltr")
                                 p.offer Переделали структуру страниц и оформление информации. Доработали форму на странице услуг. Стали регулярно наполнять сайт качественным и интересным контентом.
                 .row.margin-bottom.align-items-end
                     .col-xl-10
-                        p.heading.heading_small.margin-bottom Достигнутый эффект
+                        p.heading.heading_small Достигнутый эффект
                     .col-xl-5 
                         p.offer За первые два месяца сайт выведен в ТОП-10 по всем 20 согласованным ключам в Яндекс (плюс еще около 100 дополнительных). Далее все усилия делались на появлении результатов в Google, а также проработке ключевых запросов, которые дают больше всего заказов. 
                         p.offer.last Через 5 месяцев SOHO выполнила все поставленные задачи и привела на сайт исключительно заинтересованную аудиторию (что сильно отразилось на количестве заявок)
@@ -156,7 +156,7 @@ html(lang="ru", dir="ltr")
                         .offer.project__stats.text-bold.text-uppercase(style="background-image:url('../images/result_seo.png');") увеличилось количество переходов на сайт
                 .row
                     .col-xl-6.col-lg-5
-                        img.img-fluid.margin-bottom-md(src="../images/default.png")
+                        img.img-fluid.img-border.margin-bottom-md(src="../images/graphic-seo-portfolio.svg")
                     .col-xl-4.col-lg-5
                         p.offer.text-bold.text-uppercase Что это значит?
                         p.offer При увеличении посещаемости на 2537%, количество людей, которое уходило сразу, увеличилось на 0,78%. Мы привели на сайт только тех людей, кто интересовался данными услугами. 
@@ -191,8 +191,8 @@ html(lang="ru", dir="ltr")
                                 p прорвемся через все трудности повышенной конкуренции предложим оптимальный план продвижение сайта: тариф включает все что можно и нельзя
                             .price__footer стоимость 65к в месяц
             .container.content_price__container
-                .row
-                    .col-xl-6.offset-xl-2.text-center
+                .row.justify-content-center
+                    .col-xl-5.text-center
                         .heading.heading_small Что входит в тариф?
                         .offer Большинство предлагают стандартный набор услуг в зависимости от тарифа - это в корне неверный подход! Как можно предлагать один и тот же набор услуг для абсолютно разных сайтов?
                         .subheading оказываем только те услуги, которые действительно нужны для достижения цели! 
@@ -200,7 +200,7 @@ html(lang="ru", dir="ltr")
             .container
                 .row.align-items-end
                     .col-xl-6
-                        h4.heading Хотите, чтобы клиенты находили вас через Яндекс и Google?
+                        h4.heading.heading_medium Хотите, чтобы клиенты находили вас через Яндекс и Google?
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Конечно хочу
