--- a/src/css/blocks/_price.scss
+++ b/src/css/blocks/_price.scss
@@ -1,7 +1,7 @@
 .price{
     position: relative;
     text-align: center;
-    background: #3d3d3d;
+    background: $grey;
     border-radius: 30px;
 
     width: 330px;
@@ -10,10 +10,13 @@
 
     .price__header{
         display: inline-block;
-        padding: 12px 40px;
+
         font-size: 16px;
         font-weight: 700;
         text-transform: uppercase;
+
+        padding: 12px 40px;
+
         border-radius: 15px;
         background-image: linear-gradient( -45deg, rgb(50,43,143) 0%, rgb(63,36,166) 62%, rgb(76,28,188) 100%);          
         transform: translateY(-50%);
@@ -21,7 +24,9 @@
     .price__content{
         font-size: 14px;
         line-height: 22px;
+
         color: darken($color: $white, $amount: 30%);
+
         padding: 0 30px;
         p{
             margin-bottom: 10px;
@@ -29,8 +34,10 @@
     }
     .price__time{
         font-size: 22px;
-        color: $white;
         font-weight: bold;
+
+        color: $white;
+
         margin: 20px 0;
         padding: 0 30px;
     }
@@ -39,17 +46,21 @@
         color: darken($color: $white, $amount: 40%);
     }
     .price__footer{
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: uppercase;
+
         color: #b2afaf;
         background: #515151;
         border-radius: 0 0 30px 30px;
+
         padding: 10px 30px;
-        text-transform: uppercase;
-        font-size: 12px;
-        font-weight: bold;
         margin-top: 20px;
     }
+
     &_large{
         width: 400px;
+
         .price__header{
             font-size: 20px;
         }
@@ -62,6 +73,7 @@
         }
     }
 }
+
 .price-line{
     color: darken($color: $white, $amount: 30%);
     background: rgba(255,255,255,.1);
