--- a/src/css/content/_content.scss
+++ b/src/css/content/_content.scss
@@ -48,16 +48,15 @@
     .offer{
         font-size: 16px;
         line-height: 24px;
-
-        // color: $grey;
-        
+                
         /* Size */
         &.small{
             font-size: 14px;
+            line-height: 22px;
         }
 
         /* Indent */
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         &.last{
             margin-bottom: 0;
         }
@@ -65,6 +64,9 @@
             margin-bottom: 0;
         }
         & + .subheading{
+            margin-top: 40px;
+        }
+        & + .btn{
             margin-top: 40px;
         }
     }
@@ -80,6 +82,18 @@
             background: url("../images/points.png") no-repeat right center / cover;
         }
     }
+    ul{
+        padding-left: 20px;
+        margin-bottom: 20px;
+        li+li{
+            margin-top: 10px;
+        }
+
+        &.last{
+            margin-bottom: 0;
+        }
+    }
+
     &__group{
         margin: 40px 0;
         
@@ -92,12 +106,12 @@
             border-radius: 5px;
             padding: 15px 30px 16px; 
 
-            margin-right: 15px;
-            margin-bottom: 15px;
+            margin: 0 6px 15px;
 
             color: $grey;
             background: linear-gradient(-45deg, #d4d4d4 0%, #d0cbe3 62%, #d5c3ff 100%);
-
+        }
+        a.content__group__link{
             &:hover{
                 color: $darkblue;
                 text-decoration: none;
