--- a/src/css/elements/_indent.scss
+++ b/src/css/elements/_indent.scss
@@ -2,6 +2,11 @@
 .margin-bottom{margin-bottom: 60px;}
 .margin-auto{margin: 0 auto;}
 
+.content .offer{
+    &.margin-top{margin-top: 60px;}
+    &.margin-bottom{margin-bottom: 60px;}
+    &.margin-auto{margin: 0 auto;}
+}
 
 /* Media */
 @media(max-width: 1400px){
