--- a/src/css/page/_post.scss
+++ b/src/css/page/_post.scss
@@ -1,4 +1,5 @@
 .post{
+    background: darken($darkgrey, 3%);
     .header{
         &__email{
             left: 60px;
@@ -7,7 +8,9 @@
     }
     .heading{
         font-size: 48px;
-        margin-bottom: 50px;
+        font-weight: 400;
+
+        margin-bottom: 60px;
         color: #fff;
 
         &_blog{
@@ -17,12 +20,13 @@
 
     &__elements{
         position: absolute;
+        z-index: 2;
         max-width: 100%;
         &.elements_01{
             width: 800px;
             height: 800px;
             left: -200px;
-            top: 140px;
+            top: 170px;
         }
         &.elements_02{
             width: 500px;
@@ -31,6 +35,10 @@
             top: 40px;
         }
         
+    }
+    &__container{
+        position: relative;
+        z-index: 3;
     }
     &__item{
         margin-bottom: 40px;
@@ -45,18 +53,26 @@
             text-decoration: none;
         }
         &__title{
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 600;
             text-transform: uppercase;
-            padding: 10px 20px 5px;
+            padding: 10px 20px;
             color: #fff;
             background: rgba(39, 39, 39, 0.5);
 
+            display: flex;
+            align-items: flex-end;
             height: 50px;
         }
-        &__offer{
+        &__intro{
             font-size: 12px;
-            color: #fff;
+            color: $white;
+            background: rgba(39, 39, 39, 0.5);
+            padding: 0 20px 10px;
+        }
+        &__info{
+            font-size: 12px;
+            color: darken($white,25%);
             background: rgba(39, 39, 39, 0.5);
             padding: 0 20px 10px;
         }
