--- a/src/portfolio_inside.pug
+++ b/src/portfolio_inside.pug
@@ -23,7 +23,7 @@ html(lang="ru", dir="ltr")
                     .col-10.col-md-4.col-xl-2
                         a.header__email(href="mailto:work@websoho.ru") work@websoho.ru
                     .col-10.col-md-5.col-xl-6
-                        a.header__link(href="#") Вернуться в портфолио
+                        a.header__link(href="#") Вернуться в блог
             svg.header__nav#header__nav(version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve")
                 g
                     path.header__nav__path(d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z")
@@ -45,8 +45,8 @@ html(lang="ru", dir="ltr")
                     li.header__navbar__item
                         a.header__navbar__link(href="#") Дизайн
                 a.nav__close#navbarClose Закрыть меню
-        .blog.page
-            .blog__elements.elements_01
+        .post.page
+            .post__elements.elements_01
                 svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                     defs
                         filter#shadow(filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%")
@@ -62,7 +62,7 @@ html(lang="ru", dir="ltr")
                             stop(offset="1" stop-color="#343434")
                     g(fill-rule="nonzero")
                         path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
-            .blog__elements.elements_02
+            .post__elements.elements_02
                 svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
                     defs
                         linearGradient#gradient_02(data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
@@ -71,26 +71,27 @@ html(lang="ru", dir="ltr")
                     g(style="fill: url(#gradient_02); filter: url(#shadow);")
                         rect(x="12" y="9.5" width="71" height="160")
                         rect(x="97" y="9.5" width="71" height="160")            
-            .container
+            .container.post__container
                 .row.justify-content-center
                     .col-sm-10.col-xl-8
                         .page__image(style="background-image:url('../images/image_blog.png');")
-                        .page__info.bg-grey
+                        .page__info
                             .page__breadcrumb.breadcrumb
                                 .breadcrumb__item 
                                     a(href="#") Главная
+                                |  / 
                                 .breadcrumb__item 
                                     a(href="#") Блог
+                                |  / 
                                 .breadcrumb__item 
                                     span 6 способов прокачать первый экран на вашем сайте
                             .page__reading Время чтения: 
                                 span.text-bold 5 минут
                         .page__content
-                            h1.heading.heading_portfolio 6 способов прокачать первый экран на вашем сайте
-                            p.subheading 6 способов прокачать первый экран на вашем сайте
+                            h1.heading 6 способов прокачать первый экран на вашем сайте
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
-                            img(src='../images/image_blog.png' alt="" title="")
+                            img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
                             h2 Заголовок h2
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             h3 Заголовок h3
@@ -99,25 +100,41 @@ html(lang="ru", dir="ltr")
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
                             h5 Заголовок h5
                             p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-        .content.blog
+        .post-preview.post-preview_portfolio
+            .container
+                .heading.text-center.text-md-left Другие работы студии
+                .row.justify-content-start.justify-content-md-center
+                    .col-lg-3.col-md-5
+                        a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
+                            .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                            .post__item__info 12.09.2018
+                    .col-lg-3.col-md-5
+                        a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
+                            .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                            .post__item__info 12.09.2018
+                    .col-lg-3.col-md-5
+                        a.post__item.post__item_image(href="#" style="background-image: url('../images/belje-na-verevke.jpg')")
+                            .post__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                            .post__item__info 12.09.2018
+        .post-preview
             .container
                 .heading Самое актуальное в нашем 
                     a.link(href="#") блоге
-                .row.justify-content-between
-                    .col-xl-3.blog__item
-                        a(href="#").blog__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-xl-3.blog__item
-                        a(href="#").blog__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-xl-3.blog__item
-                        a(href="#").blog__item__title Продвижение сайта почти бесплатно
-                        .blog__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                .row
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                    .col-lg-3.post-preview__item
+                        a(href="#").post-preview__item__title Продвижение сайта почти бесплатно
+                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
         .content.content_contact.inside
             .container
                 .row
                     .col-xl-6
-                        h4.heading Нужны клиенты? <br/> Мы знаем как их получить
+                        h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
                         form.form.form_inline(action="")
                             input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                             button.btn.btn_primary(type="submit") Хочу больше клиентов
